--- a/src/components/weekend/day/Day.scss
+++ b/src/components/weekend/day/Day.scss
@@ -1,5 +1,5 @@
 // import style library
-@import '../../../statics/variables/Variables.scss';
+@import '../../../variables/Variables.scss';
 
 .weekend {
     .day {
