--- a/src/variables/Variables.scss
+++ b/src/variables/Variables.scss
@@ -6,10 +6,13 @@ $color-lightgray: lightgray;
 $color-black: black;
 $color-hot: #E8B300;
 $color-cold: #1A73E8;
+$color-background-blue: #00a6ff;
+$color-border-page: #1a73e8;
 
 // declare font-size
 $font-size-18: 18px;
 $font-size-24: 24px;
+$font-size-72: 72px;
 
 // declare font-weight
 $font-weight-500: 500;
