--- a/src/variables/Variables.scss
+++ b/src/variables/Variables.scss
@@ -12,9 +12,11 @@ $color-border-page: #1a73e8;
 // declare font-size
 $font-size-18: 18px;
 $font-size-24: 24px;
+$font-size-32: 32px;
 $font-size-72: 72px;
 
 // declare font-weight
+$font-weight-400: 400;
 $font-weight-500: 500;
 $font-weight-600: 600;
 
