complete chart, need modify daily layout 5:57pm 19/04/2021

--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -26,7 +26,18 @@
 			}
 		}
 	
-		
+		&__body {
+			padding: 30px;
+
+			h4 {
+				color: $color-white;
+			}
+		}
+		&__author {
+			padding: 30px;
+			color: $color-white;
+			padding-top: 15px;
+		}
 	
 	}
 }
