--- a/src/variables/Variables.scss
+++ b/src/variables/Variables.scss
@@ -10,6 +10,7 @@ $color-background-blue: #00a6ff;
 $color-border-page: #1a73e8;
 
 // declare font-size
+$font-size-14: 14px;
 $font-size-18: 18px;
 $font-size-24: 24px;
 $font-size-32: 32px;
